--- a/config/locales/views/users/views_users_en.yml
+++ b/config/locales/views/users/views_users_en.yml
@@ -3,3 +3,6 @@ en:
   signUp: Sign Up 
   password: Password
   send: Sign Up
+  confirmation: Confirm Password
+  email: E-Mail
+  errorHeader: Form is invalid
