--- a/config/locales/views/users/views_users_pirate.yml
+++ b/config/locales/views/users/views_users_pirate.yml
@@ -3,3 +3,6 @@ pirate:
   signUp: Onboardrrr!!
   password: Santo y seña
   send: arrrwww!!
+  confirmation: otra vez marinero
+  email: donde mando la botella??
+  errorHeader: la cagaste!!
